fix: Update manual references and formatting for consistency
- Standardized section references in the Analog Four MKII and Analog Rytm MKII manuals by removing section numbers from links and headings.
- Enhanced the MDX components to strip additional prefixes from text for improved display.
- Improved CSS styles for prose elements to enhance readability.

--- a/app/globals.css
+++ b/app/globals.css
@@ -171,10 +171,19 @@ tr {
     @apply text-[24px] leading-tight text-neutral-800 dark:text-neutral-400;
     margin-top: 0 !important;
   }
+  .prose a {
+    @apply text-[21px] leading-tight;
+    text-decoration-thickness: 2px;
+  }
 
   .prose li {
     font-weight: 300;
     @apply text-[24px] leading-tight text-neutral-800 dark:text-neutral-400;
+  }
+
+  .prose ol li::marker {
+    @apply text-[16px] text-neutral-500 dark:text-neutral-500;
+    font-weight: 400;
   }
 
   .prose h1,
